--- a/index.ejs
+++ b/index.ejs
@@ -19,6 +19,12 @@
         for (var file of chunk.files) {
           if (file.match(/\.(js|css)$/)) { %>
     <link rel="<%= chunk.initial?'preload':'prefetch' %>" href="<%= htmlWebpackPlugin.files.publicPath + file %>" as="<%= file.match(/\.css$/)?'style':'script' %>"><% }}} %>
+
+    
+    <!-- <link href="./node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="./node_modules  /bootstrap/dist/js/bootstrap.min.js"></script> -->
+
+
   </head>
   <body>
     <noscript>
